tests/sema/negative/function_argument_count_mismatch.nv
fn add(a: int, b: int) : int {
    return a + b;
}

fn main() : void {
    let x : int = add(1);
    return;
}
